Upgrade to Agones 1.6.0
This includes changing Terraform to point to the 1.6.0 Terraform
scripts, as well as installing cert-manager with the Agones cluster
details.

This also includes both the terraform and gcloud configurations for the
fleet, so that users can see the difference.

--- a/terraform-4-cluster/configs/fleet-v1-tf.yaml
+++ b/terraform-4-cluster/configs/fleet-v1-tf.yaml
@@ -16,6 +16,8 @@
 # A singular Fleet "spec" to be applied to a GCGS Config
 # See: https://agones.dev/site/docs/reference/fleet/ for reference
 #
+# Formatted as needed for Terrafrom
+#
 
 replicas: 2
 template:
