--- a/terraform-4-cluster/.gitignore
+++ b/terraform-4-cluster/.gitignore
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 !.gitignore
+/allocation/certs/
 
 # Created by .ignore support plugin (hsz.mobi)
 ### Terraform template
